@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/09/09
+	* Modified bonus3 bAddEff/bAddEffWhenHit so that the last parameter is now
+	  passed directly as "trigger" flag. The possible trigger values are
+	  ATF_LONG, ATF_SHORT, ATF_TARGET, ATF_SELF. Explanation added to
+	  doc/item_bonus.txt [Skotlex]
 	* Updated sql files [Playtester]
 2007/09/08
 	* Adjusted a spot that still blocked GL's skills on login [ultramage]
